<resources>
    <string name="app_name">ICS</string>
    <string name="btn1">Добавить товары</string>
    <string name="btn2">Снять со склада</string>
    <string name="btn3">Остаток товаров</string>
    <string name="textV_ICS">Система управления инвентаря</string>
    <string name="first">Добавление товаров</string>
    <string name="second">Списание товаров</string>
    <string name="third">Товары на складе</string>
    <string name="edT_Название">Название товара</string>
    <string name="edT_Код">Код</string>
    <string name="edT_Количество">Количество</string>
    <string name="edT_Цена">Цена за штуку</string>
    <string name="btn_Выводить">Списать товар</string>
    <string name="btn_minus">-</string>
    <string name="btn_plus">+</string>
    <string name="edT_0">0</string>
    <string name="btn_Сохранить">Сохранить</string>
    <string name="btn_Сохранить_изменения">Сохранить изменения</string>
    <string name="scan_description">Сканировать QR или Штрих код</string>
    <string-array name="currencies">
        <item>AMD - Армянский драм</item>
        <item>RUB - Российский рубль</item>
        <item>USD - Доллар США</item>
        <item>EUR - Евро</item>
    </string-array>
    <string name="select_currency">Выберите валюту</string>
    <string name="edit_item">Редактировать товар</string>
    <string name="delete_item">Удалить товар</string>
    <string name="toggle_flash">Включить фонарик</string>
    <string name="gallery_button_desc">Выбрать изображение из галереи</string>
    <string name="permission_required">Для работы приложения необходимо разрешение</string>
    <string name="camera_permission_denied">Доступ к камере запрещен</string>
    <string name="export_csv">Экспорт CSV</string>
    <string name="import_csv">Импорт CSV</string>
    <string name="export_error">Ошибка экспорта</string>
    <string name="import_success">Импортировано записей: %d</string>
    <string name="total">Сумма</string>
    <string name="select_unit">Выберите единицу</string>
    <string-array name="unit_types">
        <item>штук</item>
        <item>кг</item>
        <item>литр</item>
        <item>компл.</item>
    </string-array>
</resources>