<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/itemName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/edT_Название"
        android:inputType="text"
        android:layout_marginBottom="12dp" />

    <EditText
        android:id="@+id/itemBarcodeToRemove"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/edT_Штрих"
        android:inputType="text"
        android:layout_marginBottom="12dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/edT_Количество"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/btnDecreaseQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_minus" />

        <EditText
            android:id="@+id/itemQuantity"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:importantForAutofill="no"
            android:inputType="number"
            android:text="@string/edT_0"
            android:gravity="center" />

        <Button
            android:id="@+id/btnIncreaseQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_plus" />
    </LinearLayout>

    <Button
        android:id="@+id/removeButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/btn_Выводить"
        android:textSize="18sp"
        android:backgroundTint="@color/purple1"
        android:textColor="@android:color/white"
        android:layout_marginTop="30dp"/>
</LinearLayout>
