<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:importantForAutofill="noExcludeDescendants"
    android:background="@color/background_color"
    android:padding="16dp">

    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_gravity="center_horizontal"
        android:src="@mipmap/ic_launcher"
        android:contentDescription="@string/app_name"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/textICS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/textV_ICS"
        android:textColor="@color/dark_green"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btnAddItems"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/btn1"
        android:textSize="20sp"
        android:backgroundTint="@color/button_color"
        android:layout_marginTop="100dp"/>

    <Button
        android:id="@+id/btnRemoveItems"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:text="@string/btn2"
        android:backgroundTint="@color/button_color"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/btnViewStock"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/button_color"
        android:text="@string/btn3"
        android:textSize="20sp"/>
</LinearLayout>